[gd_scene load_steps=14 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://src/OptionButton.gd" type="Script" id=2]
[ext_resource path="res://src/dropdown.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[node name="save" type="Node2D"]
script = ExtResource( 1 )

[node name="save" type="Button" parent="."]
margin_left = 1058.68
margin_top = 417.035
margin_right = 1117.68
margin_bottom = 449.035
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="."]
margin_left = 671.127
margin_top = 189.273
margin_right = 730.127
margin_bottom = 222.273
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete" type="Button" parent="."]
margin_left = 890.0
margin_top = 421.0
margin_right = 943.0
margin_bottom = 450.0
text = "delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Button" parent="."]
margin_left = 968.568
margin_top = 416.531
margin_right = 1034.57
margin_bottom = 450.531
text = "edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rename" type="Button" parent="."]
margin_left = 1455.96
margin_top = 414.725
margin_right = 1533.96
margin_bottom = 440.725
text = "rename"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
anchor_right = 5.466
margin_left = 1154.44
margin_top = 210.295
margin_right = 1178.44
margin_bottom = 234.295
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="."]
margin_left = 1154.44
margin_top = 256.877
margin_right = 1178.44
margin_bottom = 280.877
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="."]
margin_left = 1155.07
margin_top = 308.427
margin_right = 1179.07
margin_bottom = 332.427
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="."]
margin_left = 1154.78
margin_top = 356.398
margin_right = 1181.78
margin_bottom = 388.398
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question1_1" type="Label" parent="."]
margin_left = 790.708
margin_top = 174.21
margin_right = 846.708
margin_bottom = 188.21
text = "question"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer 1" type="Label" parent="."]
margin_left = 791.099
margin_top = 219.43
margin_right = 908.099
margin_bottom = 264.43
text = "answer 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer 2" type="Label" parent="."]
margin_left = 791.573
margin_top = 263.232
margin_right = 860.573
margin_bottom = 277.232
text = "answer 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer 3" type="Label" parent="."]
margin_left = 792.999
margin_top = 315.807
margin_right = 861.999
margin_bottom = 329.807
text = "answer 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer 4" type="Label" parent="."]
margin_left = 792.999
margin_top = 367.44
margin_right = 861.999
margin_bottom = 381.44
text = "answer 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="TextEdit" parent="."]
margin_left = 873.927
margin_top = 162.649
margin_right = 1137.93
margin_bottom = 191.649
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_1" type="TextEdit" parent="."]
margin_left = 873.942
margin_top = 205.443
margin_right = 1141.95
margin_bottom = 235.443
rect_pivot_offset = Vector2( 112.325, 23 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_2" type="TextEdit" parent="."]
margin_left = 873.997
margin_top = 253.499
margin_right = 1139.0
margin_bottom = 284.499
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_3" type="TextEdit" parent="."]
margin_left = 873.997
margin_top = 307.499
margin_right = 1138.0
margin_bottom = 336.499
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_4" type="TextEdit" parent="."]
margin_left = 875.057
margin_top = 355.439
margin_right = 1136.06
margin_bottom = 384.439
custom_fonts/font = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chater" type="OptionButton" parent="."]
margin_left = 70.6844
margin_top = 185.552
margin_right = 246.684
margin_bottom = 221.552
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="OptionButton" parent="."]
margin_left = 422.041
margin_top = 182.996
margin_right = 589.041
margin_bottom = 224.996
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 134.406
margin_top = 147.221
margin_right = 174.406
margin_bottom = 161.221
text = "chater"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 476.646
margin_top = 150.05
margin_right = 528.646
margin_bottom = 164.05
text = "Number"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="path" type="TextEdit" parent="."]
margin_left = 232.335
margin_top = 145.865
margin_right = 736.335
margin_bottom = 499.865
text = "path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = 448.335
margin_top = 97.8647
margin_right = 496.335
margin_bottom = 137.865
[connection signal="pressed" from="save" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="rename" to="." method="_on_rename_pressed"]
[connection signal="item_selected" from="number" to="." method="_on_number_item_selected"]
[connection signal="item_selected" from="number" to="number" method="_on_number_item_selected"]
[connection signal="pressed" from="number" to="." method="_on_number_pressed"]
